Terminat sumar in romana. M-am apucat de prezentarea efectiva (text + poze + aranjare)

--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>HTML5 - From performant websites to multiplayer web based games | Avangate Tech Sessions</title>
+		<title>Prezentare | Avangate Tech Sessions</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	    <link rel="stylesheet" href="css/reveal.css">
-	    <link rel="stylesheet" href="css/theme/default.css" id="theme">
+	    <link rel="stylesheet" href="css/theme/beige.css" id="theme">
 	    <!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
-
 
 		<style type="text/css">
 			.reveal section img { border:none; box-shadow:none; background:none; }
 			.em2 { color:#ED9D13 !important; }
-			 html.white .state-background {
-				background-color: rgba(0,0,0, 0.8);
-			  }
 		</style>
 	</head>
 
@@ -27,18 +23,140 @@
 
 	<section>
 		<p><img src="imgs/HTML5.png" border="0"></p>
-		<p>From performant websites to multiplayer web based games</p>
+		<p>De la site-uri mai performante la jocuri web multiplayer</p>
 	</section>
 
 	<section>
-		<div style="float:left; margin-top:150px;">
 			<h2>Serban Ghita</h2>
-			<span style="font-size: 29.95642852783203px; font-style: normal; font-variant: normal;">Developer @ Avangate.com</span>
-			<div style="margin-top:50px;"><a href="http://ghita.org">http://ghita.org</a></div>
-			<div><a href="https://github.com/serbanghita">https://github.com/serbanghita</a></div>
-		</div>
-		<img width="400" src="imgs/serban_ghita.jpg" style="float:left;border-radius: 20px;box-shadow: 4px 4px 4px #3b759e; margin-left: 50px;" border="0">
+			<p>Senior Software Engineer</p>
+
+			<ul style="margin-top:20px; font-size:80%;">
+				<li class="fragment">5 ani in Avangate</li>
+				<li class="fragment">11 ani in IT &amp; eCommerce</li>
+				<li class="fragment">2002 - primul job in IT</li>
+				<li class="fragment">contribui la proiecte open-source</li>
+			</ul>
 	</section>
+
+	<section>
+		<h2>Despre mine</h2>
+		<img src="imgs/serban_ghita_2004.jpg" />
+	</section>
+
+	<section>
+		<h2>Despre mine</h2>
+		<img src="imgs/serban_ghita_2012.jpg"  />
+	</section>
+
+	<section>
+		<h2>Despre mine</h2>
+		<table>
+			<tr>
+				<td><img src="imgs/serban_ghita_2013_birou.jpg" width="400" /></td>
+				<td style="vertical-align:middle;">
+					<ul  style="font-size:80%;">
+						<li><a href="https://soundcloud.com/serban-ghita">https://soundcloud.com/serban-ghita</a></li>
+						<li><a href="http://grooveshark.com/big.ghita">http://grooveshark.com/big.ghita</a></li>
+					</ul>
+				</td>
+			</tr>
+		</table>
+	</section>
+
+	<section>
+		<h2>Despre mine</h2>
+		<img src="imgs/serban_ghita_unknown.jpg" />
+	</section>
+
+	<section>
+		<h2>Despre mine</h2>
+		<img src="imgs/serban_ghita_2013.jpg" />
+	</section>
+
+	<section>
+		<h2>Despre mine</h2>
+		<img src="imgs/serban_ghita_bb.jpg" />
+	</section>
+
+	<section>
+			<h2>Serban Ghita</h2>
+			<p>Senior Software Engineer</p>
+
+			<p>In Avangate lucrez in prezent la:</p>
+
+			<ul style="margin-top:20px; font-size:80%;">
+				<li class="fragment">Control Panel</li>
+				<li class="fragment">Shopping Cart</li>
+				<li class="fragment">Shopping Cart API</li>
+			</ul>
+	</section>
+
+	<section>
+		<h2>Avangate Cpanel</h2>
+		<img src="imgs/Avangate Control Panel - Front Page.png">
+	</section>
+
+	<section>
+		<h2>Avangate Cpanel</h2>
+		<img src="imgs/Avangate Control Panel - Mobile Editor.png">
+	</section>
+
+	<section>
+		<h2>Avangate Shopping Cart</h2>
+		<img src="imgs/Avangate Control Panel - Shopping Cart.png"> <!-- update the picture -->
+	</section>
+
+	<section>
+			<h2>Serban Ghita</h2>
+			<p>Senior Software Engineer</p>
+
+			<p style="margin-top:20px; font-size:80%;">Proiecte <span class="em2">open-source</span>: <a href="https://github.com/serbanghita">https://github.com/serbanghita</a></p>
+
+			<img src="imgs/mobile_detect_net.png">
+
+	</section>
+
+
+	<section>
+		<h2>Sa ne cunoastem</h2>
+
+		<ul style="margin-top:20px; font-size:80%;">
+			<li class="fragment">Cati dintre voi au folosit pana acum <span class="em2">HTML5</span> in productie?</li>
+			<li class="fragment">Cati dintre voi au dezvoltat aplicatii web de tip <span class="em2">single-page</span>?</li>
+			<li class="fragment">Cati dintre voi au dezvoltat <span class="em2">jocuri web</span> (Flash, HTML5)?</li>
+		</ul>
+	</section>
+
+	<section>
+		<h2>Sumar prezentare</h2>
+
+		<ul style="margin-top:20px; font-size:80%;">
+			<li class="fragment">Ce este <span class="em2">HTML5</span></li>
+			<li class="fragment">Care sunt noile facilitati (<span class="em2">markup</span> &amp; <span class="em2">APIs</span>)</li>
+			<li class="fragment">Parti bune, care sunt provocarile</li>
+			<li class="fragment">Impactul asupra dispozitivelor clasice si mobile</li>
+			<li class="fragment">Studii de caz</li>
+			<li class="fragment">Exemple concrete folosite de mine</li>
+		</ul>
+	</section>
+
+	<section>
+		<h2>Termeni noi</h2>
+
+		<ul style="margin-top:20px; font-size:80%;">
+			<li class="fragment"></li> <!-- AICI -->
+		</ul>
+	</section>
+
+	<section>
+		<h2>Ce este HTML5</h2>
+	</section>
+
+
+
+
+
+
 
 	<section>
 		<!-- slide cu cpanel, cart, github -->
@@ -93,13 +211,13 @@
 
 	<section>
 		<h2>Notable markup differences</h2>
-		<p>New and relaxed parsing rules for browsers. 
+		<p>New and relaxed parsing rules for browsers.
 			<br>Both <span class="em2">&lt;img src="test.jpg" /&gt;</span> and <span class="em2">&lt;img src="test.jpg"&gt;</span> accepted.</p>
 	</section>
 
 	<section>
 		<h2>Notable markup differences</h2>
-		<p>New tags</p>	
+		<p>New tags</p>
 		<table style="margin:10px auto 0;">
 			<tr>
 				<td class="em2">&lt;article&gt;</td>
@@ -132,7 +250,7 @@
 				<td></td>
 				<td></td>
 				<td></td>
-			</tr>									
+			</tr>
 		</table>
 
 		<aside class="notes">
@@ -144,32 +262,32 @@
 	       		<li></li>
 	       		<li></li>
 	       </ul>
-		</aside>		
+		</aside>
 
 		<!--
-		, , , , , , data, datalist, details, , figcaption, figure, , , keygen, mark, meter, nav, output, progress, rp, rt, ruby, , source, summary, time, , , wbr		
-		-->	
+		, , , , , , data, datalist, details, , figcaption, figure, , , keygen, mark, meter, nav, output, progress, rp, rt, ruby, , source, summary, time, , , wbr
+		-->
 	</section>
 
 	<section>
 		<h2>Notable markup differences</h2>
-		<p>New form controls: <span class="em2">email</span>, <span class="em2">number</span>, <span class="em2">search</span>, <span class="em2">url</span>, <span class="em2">range</span>, <span class="em2">date</span>, <span class="em2">time</span>,  <span class="em2">tel</span>, <span class="em2">color</span></p>						
+		<p>New form controls: <span class="em2">email</span>, <span class="em2">number</span>, <span class="em2">search</span>, <span class="em2">url</span>, <span class="em2">range</span>, <span class="em2">date</span>, <span class="em2">time</span>,  <span class="em2">tel</span>, <span class="em2">color</span></p>
 	</section>
 
 	<section>
 		<h2>Notable markup differences</h2>
-		<p>New form control attributes: <span class="em2">placeholder</span>, <span class="em2">pattern</span>, <span class="em2">required</span>, <span class="em2">list</span>, <span class="em2">min</span>, <span class="em2">max</span>, <span class="em2">step</span>, etc.</p>						
+		<p>New form control attributes: <span class="em2">placeholder</span>, <span class="em2">pattern</span>, <span class="em2">required</span>, <span class="em2">list</span>, <span class="em2">min</span>, <span class="em2">max</span>, <span class="em2">step</span>, etc.</p>
 	</section>
 
 	<section>
 		<h2>Notable markup differences</h2>
-		<p>New attributes: <span class="em2">charset</span> (on <span class="em2">meta</span>), <span class="em2">async</span> (on <span class="em2">script</span>)</p>			
-	</section>		
+		<p>New attributes: <span class="em2">charset</span> (on <span class="em2">meta</span>), <span class="em2">async</span> (on <span class="em2">script</span>)</p>
+	</section>
 
 	<section>
 		<h2>Notable markup differences</h2>
 		<p>Custom attributes: <span class="em2">data-*</span>. Set: <span class="em2">data-userid="1234"</span> Get: <span class="em2">elem.dataset.userid</span></p>
-	</section>	
+	</section>
 
 	<section>
 		<h2 class="em2">HTML markup</h2>
@@ -388,7 +506,7 @@
 		<img src="imgs/av_visitor/entrance.jpg" style="border:2px solid white;" />
 		<!-- @todo: gasit poza -->
 		<!-- descriere -->
-		<!-- obiective mele -->		
+		<!-- obiective mele -->
 		<!-- explicat diferenta intre GPU si CPU -->
 
 
@@ -413,7 +531,7 @@
 
 
 				Reveal.initialize({
-					margin: 0.1,
+					margin: 0,
 					dependencies: [
 						{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
 						{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
@@ -424,7 +542,7 @@
 					],
 					theme: Reveal.getQueryHash().theme,
 					center: true,
-					controls: false,
+					controls: true,
 					transition: 'concave',
 					transitionSpeed: 'fast',
 					backgroundTransition: 'linear',
