--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Testing Sheet by Şerban Ghiţă | Avangate Tech Sessions</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <style>
             .header, .footer { width:600px; border:1px dotted #ccc; }
             .header { background: #BDE3F2; }
