20 slide-uri gata!

--- a/index.html
+++ b/index.html
@@ -144,8 +144,57 @@
 		<h2>Termeni noi</h2>
 
 		<ul style="margin-top:20px; font-size:80%;">
-			<li class="fragment"></li> <!-- AICI -->
+			<li class="fragment">Progressive enhancement</li>
+			<li class="fragment">Mobile first</li>
+			<li class="fragment">Polyfills</li>
+			<li class="fragment">Milestones / Legacy</li>
 		</ul>
+	</section>
+
+	<section>
+		<h6>Termeni noi</h6>
+		<h2>Progressive enhancement</h2>
+
+		<p>Stategie de web design prin care toti vizitatorii site-ului pot experimenta cel putin o versiune de baza functionala.
+			Cei ce au browsere sau conexiuni mult mai capabile vor beneficia de o experienta de navigare imbunatatita.</p>
+		<p>Alternativa la stategia "Graceful degradation".</p>
+		<p  style="margin-top:20px; font-size:80%;">Ex: <span class="em2">CSS3 border-radius, box-shadow, gradients, etc.</span></p>
+	</section>
+
+	<section>
+		<h6>Termeni noi</h6>
+		<h2>Mobile first</h2>
+
+		<p>Strategie de web design prin care un site, destinat dispozitivelor clasice si mobile, este conceput.</p>
+
+		<p style="margin-top:20px; font-size:80%;">De citit: <a href="https://speakerdeck.com/mdo/desktop-first-to-mobile-first-with-bootstrap">Desktop-first to Mobile-first with Bootstrap</a> - Mark Otto</p>
+	</section>
+
+	<section>
+		<h6>Termeni noi</h6>
+		<h2>Polyfills</h2>
+
+		<p>Un cod (de regula JavaScript) ce suplineste o functionalitate ce nu este disponibila in browser-ul vizitatorului.</p>
+		<p>A nu se confunda cu <span class="em2">widgets</span>, care de fapt adauga functionalitati noi.</p>
+
+		<p style="margin-top:20px; font-size:80%;">
+			Exemple polyfills: <a href="https://github.com/Modernizr/Modernizr/wiki/HTML5-Cross-browser-Polyfills">Modernizr Wiki</a><br>
+			Exemplu widget: <span class="em2">&lt;input type="range"&gt;</span> - <a href="http://view.jquerymobile.com/1.3.2/dist/demos/widgets/forms/">implementare jQuery Mobile</a>
+		</p>
+
+	</section>
+
+	<section>
+		<h6>Termeni noi</h6>
+		<h2>Milestones / Legacy</h2>
+
+		<p>Un software ce a fost facut acum cativa ani si care este utilizat de clienti in mod activ nu poate fi rescris peste noapte
+			si nici nu poate fi intrerupt pentru un upgrade major. </p>
+		<p>Un <span class="em2">milestone</span> reprezinta un capitol nou in viata unui software
+			ce poate functiona in mod diferit fata de cele anterioare, care devin automat <span class="em2">legacy</span>.</p>
+
+		<p style="margin-top:20px; font-size:80%;">Exemplu: <a href="https://secure.avangate.com/cpanel/design_edit.php?template=6200">Avangate Template Editor</a></p>
+
 	</section>
 
 	<section>
